fix: set anchor z-index bigger than fixed button(#master)

--- a/pages/post/post.less
+++ b/pages/post/post.less
@@ -162,7 +162,7 @@
   position: fixed;
   right: 20px;
   top: 60px;
-  z-index: 2;
+  z-index: 10;
   width: auto;
   text-align: center;
 }
